# aidvertaiser

./: .gitignore  README.md  pyproject.toml
.plan/: TODO.md  investigation-2026-03-31.md  spec-holiday-automation.md
docs/plans/: 2025-12-26-unified-ads-mcp.md  2026-02-24-conversion-management.md  2026-03-10-bing-webmaster-tools.md
marketing/: PPC-CAMPAIGN-MASTER-MANUAL-2026.md
src/unified_ads_mcp/: __init__.py  __main__.py  config.py  server.py
src/unified_ads_mcp/analytics/: __init__.py  accounts.py  client.py  custom_dimensions.py  data_streams.py  key_events.py  measurement_protocol.py  properties.py  reporting.py
src/unified_ads_mcp/auth/: __init__.py  bing_auth.py  google_analytics_auth.py  google_auth.py  google_searchconsole_auth.py  google_tagmanager_auth.py  meta_auth.py  oauth_server.py
src/unified_ads_mcp/bing/: __init__.py  analytics.py  client.py  crawl.py  keywords.py  links.py  sitemaps.py  sites.py  submissions.py
src/unified_ads_mcp/google/: __init__.py  ad_groups.py  ads.py  asset_groups.py  assets.py  automation.py  campaigns.py  client.py  conversions.py  keywords.py  labels.py  reporting.py
src/unified_ads_mcp/matomo/: __init__.py  client.py  goals.py  live.py  reporting.py  sites.py
tests/: __init__.py  conftest.py  test_ga4_analytics.py  test_google_asset_automation.py  test_google_bidding.py  test_google_conversions.py  test_google_tracking_template.py  test_matomo.py  test_meta_auth.py  test_meta_campaigns.py  test_meta_conversions.py  test_meta_creatives.py  test_meta_insights.py
website/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
website/public/: robots.txt
website/src/: App.tsx
(+63 files in other folders)
