[project]
name = "unified-ads-mcp"
version = "1.0.0"
description = "Unified MCP server for Google Ads and Meta Ads management"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "fastmcp>=2.14.1",
    "google-ads>=28.4.1",
    "google-analytics-admin>=0.27.0",
    "google-analytics-data>=0.20.0",
    "facebook-business>=22.0.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.192.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
unified-ads-mcp = "unified_ads_mcp:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unified_ads_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
